tests/fsharp/typecheck/sigs/neg42.bsl

neg42.fsi(3,1,3,5): parse error FS0010: Unexpected start of structured construct in signature file. Expected '=', ':' or other token.

neg42.fsi(4,1,4,1): parse error FS0010: Incomplete structured construct at or before this point in signature file
